@@ -5,8 +5,6 @@ import org.springframework.context.MessageSource;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.support.ResourceBundleMessageSource;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.servlet.LocaleResolver;
 import org.springframework.web.servlet.config.annotation.CorsRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
@@ -48,7 +46,7 @@ public class ProjectConfig {
     @Bean
     public LocaleResolver localeResolver() {
         FixedLocaleResolver resolver = new FixedLocaleResolver();
-        resolver.setDefaultLocale(new Locale("es", "CR"));
+        resolver.setDefaultLocale(Locale.of("es", "CR"));
         return resolver;
     }
 }
